# USRentals

./: db.sqlite3  left to do.txt  pyproject.toml  requirements.txt
backend/: settings.py
core/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_tour_user.py  0003_rental_img1_rental_img2_rental_img3.py  0004_rental_hoa_dues_rental_about_description_and_more.py  0005_client.py  0006_admin.py  0007_alter_tour_rental.py
core/templates/: admin_dashboard.html  base.html  frontpage.html  login.html  rental.html  signup.html  tour.html  user_dashboard.html
core/templates/partials/: fp_rent_item.html  rent_item.html  tour.html
staticfiles/: staticfiles.json  style.css  style.d4843ec1f475.css
